Closed Bug 180901 Opened 23 years ago Closed 23 years ago

Sending with only BCC recepients also sends to ME

Categories

(MailNews Core :: Composition, defect)

x86
Linux
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.3alpha

People

(Reporter: david.hagood, Assigned: bugzilla)

Details

Attachments

(1 file, 2 obsolete files)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3a) Gecko/20021118 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3a) Gecko/20021118 When forwarding a bunch of spam to BCC:spamcop and BCC:uce@ftc.gov, the messages also get send to my address as well. I've verified that I DON'T have the mail system set to auto-send messages to me, and I don't see this behavior if I send a normal message (i.e. one that has at least one recipent that is not BCC'ed). Reproducible: Always Steps to Reproduce: 1. Compose email 2. Set recipent lists to just BCC - not CC or TO 3. Send mail Actual Results: Mail is sent to BCC list, and to sender's address. Expected Results: As per older Mozillas, mail should just be sent to the BCC addresses.
This is a new behavior to prevent some poor mail server to reveal BCC recepient when no TO or CC are specified. It's a trade of we had to take. Why not forwarding your spam using TO or cc?
At a minimum, it would be best (IMHO) if Mozilla were to warn you that it was going to add an email to the mail, and why. In the case I list, Spamcop gets "confused" if it sees any other recipents of the mail, and it is possible that uce@ftc.gov might as well, hence why I BCC everybody. I started getting my (rather lengthy) spam reports seemingly bounced back to me for no obvious reason, and no obvious explaination as to why. At least if Mozilla popped up a dialog saying "I'm going to add you, since some buggy mailers might puke on this" would have given me a clue as what is going on.
I'll see if I can add a (hidden) pref to disable this feature...
This is the workaround for bug fix to 16499. Resolving as assigned since jean-francoise is looking into a hidden pref
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
accepting, despite Esthere still doesn't know how to write my name :-)
Target Milestone: --- → mozilla1.3alpha
Whiteboard: have fix
Attached patch Proposed fix, v1 (obsolete) — Splinter Review
Add a pref (no ui) to disable auto-addressing when no recipient are disclosed
Comment on attachment 107515 [details] [diff] [review] Proposed fix, v1 if somebody has a better name for the pref, I am fully open...
Attachment #107515 - Flags: review?(cavin)
Comment on attachment 107515 [details] [diff] [review] Proposed fix, v1 r=cavin.
Attachment #107515 - Flags: review?(cavin) → review+
how about just "send_to_self_when_no_disclosed_recipients"
Attached patch Proposed fix, v2 (obsolete) — Splinter Review
I went back to my copy and decide to reimplement this feature like I should have done the first time by addressing the message to an empty group named undisclosed-recipients instead of addressing it to the sender. I put also a preference just in case! I haven't did that in first place because I touhgt my mailserver has trouble handling empty groups but it was in fact a problem on the Mozilla side (group need to be undone before handing the list of recipient to SMTP). The proposed fix will make Mozilla supports empty groups. Mozilla still have problem with non empty group but that is out of the scope of this bug
Attachment #107515 - Attachment is obsolete: true
Attachment #107618 - Flags: superreview?(bienvenu)
Attachment #107618 - Flags: review?(cavin)
Comment on attachment 107618 [details] [diff] [review] Proposed fix, v2 r=cavin.
Attachment #107618 - Flags: review?(cavin) → review+
Comment on attachment 107618 [details] [diff] [review] Proposed fix, v2 + aChar = *readPtr; + readPtr ++; can just be: aChar = *readPtr++ and we talked about having a better comment about the input syntax for UndoAddressGroup
Attached patch Proposed fix, v3Splinter Review
I addressed bienvenu's comment received by AIM. Rename a function and add better comment.
Attachment #107618 - Attachment is obsolete: true
Comment on attachment 107920 [details] [diff] [review] Proposed fix, v3 carry over R=cavin
Attachment #107920 - Flags: superreview?(bienvenu)
Attachment #107920 - Flags: review+
Comment on attachment 107920 [details] [diff] [review] Proposed fix, v3 sr=bienvenu
Attachment #107920 - Flags: superreview?(bienvenu) → superreview+
Fix checked in the trunk. Now, when no recipient is disclosed, the message is addressed to an empty group named undisclosed-recipients if the pref "mail.compose.add_undisclosed_recipients" is set to true (true by default).
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Whiteboard: have fix
Attachment #107618 - Flags: superreview?(bienvenu)
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: