Fix for bug 180901. Instead of addressing the message to the sender when no recipient is disclosed, it's send now to an empty group named undisclosed-recipients (this is localizable). Also, this is done only if the pref "mail.compose.add_undisclosed_recipients" is set to true. R=cavin, SR=bienvenu