modules/libpref/src/init/mailnews.js
@@ -500,3 +500,8 @@ pref("mailnews.fakeaccount.server", "");
 // message display properties
 pref("mailnews.message_display.disable_remote_image", false);
 pref("mailnews.message_display.allow.plugins", true);
+
+// When there is no disclosed recipients (only bcc), we should address the message to empty group
+// to prevent some mail server to disclose the bcc recipients
+pref("mail.compose.add_undisclosed_recipients", true);
+
